# openapi/openapi_v3.json
@@ -1,23 +1,72 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/api/equipes/ativas": {
+    "/api/equipments": {
       "get": {
-        "summary": "/api/equipes/ativas",
+        "summary": "/api/equipments",
         "responses": {},
         "tags": []
-      }
-    },
-    "/api/equipes": {
+      },
       "post": {
-        "summary": "/api/equipes",
+        "summary": "/api/equipments",
         "responses": {},
         "tags": []
       }
     },
-    "/api/integrantes/perfil/{id}": {
+    "/api/equipments/serial/{serialNumber}": {
       "get": {
-        "summary": "/api/integrantes/perfil/{id}",
+        "summary": "/api/equipments/serial/{serialNumber}",
+        "parameters": [
+          {
+            "name": "serialNumber",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/equipments/category/{category}": {
+      "get": {
+        "summary": "/api/equipments/category/{category}",
+        "parameters": [
+          {
+            "name": "category",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/equipments/status/{status}": {
+      "get": {
+        "summary": "/api/equipments/status/{status}",
+        "parameters": [
+          {
+            "name": "status",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/equipments/{id}": {
+      "get": {
+        "summary": "/api/equipments/{id}",
         "parameters": [
           {
             "name": "id",
@@ -30,18 +79,24 @@
         ],
         "responses": {},
         "tags": []
-      }
-    },
-    "/api/integrantes": {
-      "post": {
-        "summary": "/api/integrantes",
-        "responses": {},
-        "tags": []
-      }
-    },
-    "/api/integrantes/{id}": {
+      },
       "put": {
-        "summary": "/api/integrantes/{id}",
+        "summary": "/api/equipments/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "delete": {
+        "summary": "/api/equipments/{id}",
         "parameters": [
           {
             "name": "id",
@@ -56,45 +111,9 @@
         "tags": []
       }
     },
-    "/api/equipamentos/categorias": {
+    "/api/presences": {
       "get": {
-        "summary": "/api/equipamentos/categorias",
-        "responses": {},
-        "tags": []
-      },
-      "post": {
-        "summary": "/api/equipamentos/categorias",
-        "responses": {},
-        "tags": []
-      }
-    },
-    "/api/equipamentos": {
-      "get": {
-        "summary": "/api/equipamentos",
-        "responses": {},
-        "tags": []
-      },
-      "post": {
-        "summary": "/api/equipamentos",
-        "responses": {},
-        "tags": []
-      }
-    },
-    "/api/eventos": {
-      "get": {
-        "summary": "/api/eventos",
-        "responses": {},
-        "tags": []
-      },
-      "post": {
-        "summary": "/api/eventos",
-        "responses": {},
-        "tags": []
-      }
-    },
-    "/api/presencas": {
-      "get": {
-        "summary": "/api/presencas",
+        "summary": "/api/presences",
         "responses": {
           "200": {
             "description": "OK",
@@ -103,15 +122,11 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "sucesso": {
+                    "success": {
                       "type": "boolean",
                       "example": true
                     },
-                    "total": {
-                      "type": "number",
-                      "example": 50
-                    },
-                    "dados": {
+                    "data": {
                       "type": "array",
                       "items": {
                         "type": "object",
@@ -119,54 +134,24 @@
                           "id": {
                             "type": "number"
                           },
-                          "id_evento": {
+                          "memberId": {
                             "type": "number"
                           },
-                          "nome_evento": {
-                            "type": "string"
-                          },
-                          "id_integrante": {
+                          "eventId": {
                             "type": "number"
-                          },
-                          "nome_colete": {
-                            "type": "string"
-                          },
-                          "presente": {
-                            "type": "number"
-                          },
-                          "justificativa_falta": {
-                            "nullable": true
-                          },
-                          "justificativa_aceita": {
-                            "type": "number"
-                          },
-                          "data_criacao": {
-                            "type": "string"
                           }
                         },
                         "required": [
                           "id",
-                          "id_evento",
-                          "nome_evento",
-                          "id_integrante",
-                          "nome_colete",
-                          "presente",
-                          "justificativa_falta",
-                          "justificativa_aceita",
-                          "data_criacao"
+                          "memberId",
+                          "eventId"
                         ]
                       },
                       "example": [
                         {
-                          "id": 156,
-                          "id_evento": 11,
-                          "nome_evento": "CONFRATERNIZAÇÃO CMD XIV",
-                          "id_integrante": 22,
-                          "nome_colete": "CARVALHO",
-                          "presente": 1,
-                          "justificativa_falta": null,
-                          "justificativa_aceita": 0,
-                          "data_criacao": "31/08/2026 22:46:09"
+                          "id": 2,
+                          "memberId": 1,
+                          "eventId": 3
                         }
                       ]
                     }
@@ -177,11 +162,80 @@
           }
         },
         "tags": []
+      },
+      "post": {
+        "summary": "/api/presences",
+        "responses": {},
+        "tags": []
       }
     },
-    "/api/presencas/eventos/{id}/gerar-qr": {
-      "post": {
-        "summary": "/api/presencas/eventos/{id}/gerar-qr",
+    "/api/presences/event/{eventId}": {
+      "get": {
+        "summary": "/api/presences/event/{eventId}",
+        "parameters": [
+          {
+            "name": "eventId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/presences/member/{memberId}": {
+      "get": {
+        "summary": "/api/presences/member/{memberId}",
+        "parameters": [
+          {
+            "name": "memberId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/presences/{id}": {
+      "get": {
+        "summary": "/api/presences/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "put": {
+        "summary": "/api/presences/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "delete": {
+        "summary": "/api/presences/{id}",
         "parameters": [
           {
             "name": "id",
@@ -196,16 +250,169 @@
         "tags": []
       }
     },
-    "/api/presencas/validar": {
+    "/api/members": {
+      "get": {
+        "summary": "/api/members",
+        "responses": {},
+        "tags": []
+      },
       "post": {
-        "summary": "/api/presencas/validar",
+        "summary": "/api/members",
         "responses": {},
         "tags": []
       }
     },
-    "/api/presencas/eventos/{id}": {
+    "/api/members/{id}": {
       "get": {
-        "summary": "/api/presencas/eventos/{id}",
+        "summary": "/api/members/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "put": {
+        "summary": "/api/members/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "delete": {
+        "summary": "/api/members/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/teams": {
+      "get": {
+        "summary": "/api/teams",
+        "responses": {},
+        "tags": []
+      },
+      "post": {
+        "summary": "/api/teams",
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/teams/{id}": {
+      "get": {
+        "summary": "/api/teams/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "put": {
+        "summary": "/api/teams/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "delete": {
+        "summary": "/api/teams/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/events": {
+      "get": {
+        "summary": "/api/events",
+        "responses": {},
+        "tags": []
+      },
+      "post": {
+        "summary": "/api/events",
+        "responses": {},
+        "tags": []
+      }
+    },
+    "/api/events/{id}": {
+      "get": {
+        "summary": "/api/events/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "put": {
+        "summary": "/api/events/{id}",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {},
+        "tags": []
+      },
+      "delete": {
+        "summary": "/api/events/{id}",
         "parameters": [
           {
             "name": "id",
